iris/docs/v1.7.2/_sources/iris/iris/aux_factory.txt
.. _iris.aux_factory:

================
iris.aux_factory
================



.. currentmodule:: iris

.. automodule:: iris.aux_factory

In this module:

 * :py:obj:`AuxCoordFactory`
 * :py:obj:`HybridHeightFactory`
 * :py:obj:`HybridPressureFactory`
 * :py:obj:`LazyArray`
 * :py:obj:`OceanSigmaZFactory`



Represents a "factory" which can manufacture an additional auxiliary
coordinate on demand, by combining the values of other coordinates.

Each concrete subclass represents a specific formula for deriving
values from other coordinates.

The `standard_name`, `long_name`, `var_name`, `units`, `attributes` and
`coord_system` of the factory are used to set the corresponding
properties of the resulting auxiliary coordinates.

..

    .. autoclass:: iris.aux_factory.AuxCoordFactory
        :members:
        :undoc-members:
        :inherited-members:


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


Defines a hybrid-height coordinate factory with the formula:
    z = a + b * orog

..

    .. autoclass:: iris.aux_factory.HybridHeightFactory
        :members:
        :undoc-members:
        :inherited-members:


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


Defines a hybrid-pressure coordinate factory with the formula:
    p = ap + b * ps

..

    .. autoclass:: iris.aux_factory.HybridPressureFactory
        :members:
        :undoc-members:
        :inherited-members:


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


Represents a simplified NumPy array which is only computed on demand.

It provides the :meth:`view()` and :meth:`reshape()` methods so it
can be used in place of a standard NumPy array under some
circumstances.

The first use of either of these methods causes the array to be
computed and cached for any subsequent access.

..

    .. autoclass:: iris.aux_factory.LazyArray
        :members:
        :undoc-members:
        :inherited-members:


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


Defines an ocean sigma over z coordinate factory.

..

    .. autoclass:: iris.aux_factory.OceanSigmaZFactory
        :members:
        :undoc-members:
        :inherited-members:

